--- a/core-web/libs/dotcms-scss/shared/_colors.scss
+++ b/core-web/libs/dotcms-scss/shared/_colors.scss
@@ -10,7 +10,6 @@ $color-palette-primary-600: var(--color-palette-primary-600);
 $color-palette-primary-700: var(--color-palette-primary-700);
 $color-palette-primary-800: var(--color-palette-primary-800);
 $color-palette-primary-900: var(--color-palette-primary-900);
-$color-palette-primary: var(--color-palette-primary);
 
 $color-palette-primary-op-10: var(--color-palette-primary-op-10);
 $color-palette-primary-op-20: var(--color-palette-primary-op-20);
@@ -22,8 +21,9 @@ $color-palette-primary-op-70: var(--color-palette-primary-op-70);
 $color-palette-primary-op-80: var(--color-palette-primary-op-80);
 $color-palette-primary-op-90: var(--color-palette-primary-op-90);
 
-$color-primary-shade: var(--color-primary-shade);
-$color-primary-tint: var(--color-primary-tint);
+$color-palette-primary-shade: var(--color-primary-shade);
+$color-palette-primary: var(--color-palette-primary);
+$color-palette-primary-tint: var(--color-primary-tint);
 
 $color-palette-secondary-100: var(--color-palette-secondary-100);
 $color-palette-secondary-200: var(--color-palette-secondary-200);
@@ -34,7 +34,6 @@ $color-palette-secondary-600: var(--color-palette-secondary-600);
 $color-palette-secondary-700: var(--color-palette-secondary-700);
 $color-palette-secondary-800: var(--color-palette-secondary-800);
 $color-palette-secondary-900: var(--color-palette-secondary-900);
-$color-palette-secondary: var(--color-palette-secondary);
 
 $color-palette-secondary-op-10: var(--color-palette-secondary-op-10);
 $color-palette-secondary-op-20: var(--color-palette-secondary-op-20);
@@ -46,8 +45,9 @@ $color-palette-secondary-op-70: var(--color-palette-secondary-op-70);
 $color-palette-secondary-op-80: var(--color-palette-secondary-op-80);
 $color-palette-secondary-op-90: var(--color-palette-secondary-op-90);
 
-$color-secondary-shade: var(--color-secondary-shade);
-$color-secondary-tint: var(--color-secondary-tint);
+$color-palette-secondary-shade: var(--color-secondary-shade);
+$color-palette-secondary: var(--color-palette-secondary);
+$color-palette-secondary-tint: var(--color-secondary-tint);
 
 $color-palette-black-op-10: var(--color-palette-black-op-10);
 $color-palette-black-op-20: var(--color-palette-black-op-20);
