feat(edit-content) add new test #28493

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -38,7 +38,7 @@
 }
 
 .category-field__right-pane {
-    flex: 0 0 25%; // Ajusta según sea necesario
+    flex: 0 0 25%;
     gap: $spacing-1;
 }
 
@@ -48,6 +48,10 @@
     border-radius: $border-radius-md;
     background-color: $white;
     overflow: hidden;
+}
+
+.category-field__selected-categories-list {
+    overflow-y: auto;
 }
 
 :host ::ng-deep .p-sidebar-content {
