--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.html
@@ -1,13 +1,16 @@
 <ul class="category-list">
     @for (category of $categories(); track category.key) {
-    <li class="category-list__item" @fadeAnimation>
+    <li class="category-list__item" @fadeAnimation data-testId="category-item">
         <div class="category-list__item-content">
-            <div class="category-list__title">{{ category.value }}</div>
+            <div class="category-list__title" data-testId="category-title">
+                {{ category.value }}
+            </div>
             <div class="category-list__path">
                 <span
                     [pTooltip]="category.path"
                     tooltipPosition="top"
-                    class="category-list__path-content">
+                    class="category-list__path-content"
+                    data-testId="category-path">
                     {{ category.path || 'edit.content.category-field.category.root-name' | dm }}
                 </span>
             </div>
@@ -18,12 +21,12 @@
                 (click)="removeItem.emit(category.key)"
                 icon="pi pi-times"
                 class="p-button-sm p-button-text p-button-secondary"
-                data-testId="category-list__remove-btn"
+                data-testId="category-remove-btn"
                 pButton></button>
         </div>
     </li>
 
     } @empty {
-    <li>No Categories selected</li>
+    <li data-testId="category-list-empty">No Categories selected</li>
     }
 </ul>
