--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.scss
@@ -8,9 +8,10 @@
 
 .category-list__item {
     display: grid;
-    grid-template-columns: 1fr 40px;
+    grid-template-columns: 1fr 32px;
     align-items: center;
     padding: $spacing-1 0;
+    gap: $spacing-1;
     border-bottom: 1px solid $color-palette-gray-300;
 }
 
