--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -40,6 +40,7 @@
 .category-field__right-pane {
     flex: 0 0 25%;
     gap: $spacing-1;
+    padding: $spacing-3;
 }
 
 .category-field__categories,
