--- a/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/form/content-types-form.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/shared/dot-content-types-edit/components/form/content-types-form.component.scss
@@ -22,6 +22,10 @@
     &.content-type__form-banner {
         padding-top: 3.5rem;
     }
+
+    .field label {
+        font-size: $font-size-md;
+    }
 }
 
 .content-type__form-dates {
