feat(edit-content) use var in sass #28493

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.scss
@@ -8,7 +8,7 @@
 
 .category-list__item {
     display: grid;
-    grid-template-columns: 1fr 32px;
+    grid-template-columns: 1fr $spacing-5;
     align-items: center;
     padding: $spacing-1 0;
     gap: $spacing-1;
