--- a/core-web/libs/dotcms-webcomponents/src/elements/dot-contentlet-thumbnail/dot-contentlet-thumbnail.scss
+++ b/core-web/libs/dotcms-webcomponents/src/elements/dot-contentlet-thumbnail/dot-contentlet-thumbnail.scss
@@ -26,6 +26,11 @@ dot-contentlet-icon {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+
+    &.svg-thumbnail {
+        background-size: contain;
+    }
+
     img {
         width: 0px;
         height: 0px;
