--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/components/dot-binary-field-preview/dot-binary-field-preview.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/components/dot-binary-field-preview/dot-binary-field-preview.component.scss
@@ -7,8 +7,14 @@
 }
 
 dot-contentlet-thumbnail::ng-deep {
+    .background-image:not(.svg-thumbnail) {
+        img {
+            object-fit: cover;
+        }
+    }
+
     img {
-        object-fit: cover;
+        object-fit: contain;
     }
 }
 
