feat(edit-content) add selected component in sidebar, remove item and clear all button (#29237)
### Proposed Changes
* Add a selected component in the sidebar
* Ability to remove items from selected
* Add Clear All button

### Checklist
- [x] Tests
- [x] Translations
- [ ] Security Implications Contemplated (add notes if applicable)

### Additional Info
** any additional useful context or info **

### Walkthrough


https://github.com/user-attachments/assets/f83df33d-32fa-4b49-b49b-341d0def276c

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -38,8 +38,9 @@
 }
 
 .category-field__right-pane {
-    flex: 0 0 25%; // Ajusta según sea necesario
+    flex: 0 0 25%;
     gap: $spacing-1;
+    padding: $spacing-3;
 }
 
 .category-field__categories,
@@ -48,6 +49,10 @@
     border-radius: $border-radius-md;
     background-color: $white;
     overflow: hidden;
+}
+
+.category-field__selected-categories-list {
+    overflow-y: auto;
 }
 
 :host ::ng-deep .p-sidebar-content {
