--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -32,9 +32,11 @@
             <div class="flex-grow-1 category-field__categories">
                 @if (store.mode() === 'list') {
                 <dot-category-field-category-list
+                    @fadeAnimation
                     (itemChecked)="store.updateSelected($event.selected, $event.item)"
                     (rowClicked)="store.getCategories($event)"
                     [categories]="store.categoryList()"
+                    [isLoading]="store.isListLoading()"
                     [selected]="store.selectedCategoriesValues()" />
                 } @else {
                 <dot-category-field-search-list
