--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.html
@@ -13,8 +13,4 @@
     field="label"
     dataKey="label"
     inputStyleClass="ui-inputtext "
-    appendTo="body">
-</p-autoComplete>
-<span *ngIf="inputReference?.value?.trim()" class="autocomplete-helper">
-    {{ 'dot.common.press' | dm }}<dot-icon name="subdirectory_arrow_left" size="12"></dot-icon>
-</span>
+    appendTo="body"></p-autoComplete>
