--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/dot-edit-content-category-field.component.html
@@ -1,8 +1,8 @@
 @if (store.selected().length) {
-<dot-category-field-chips
-    data-testId="category-chip-list"
-    [categories]="store.selected()"
-    (remove)="store.removeSelected($event)" />
+    <dot-category-field-chips
+        data-testId="category-chip-list"
+        [categories]="store.selected()"
+        (remove)="store.removeSelected($event)" />
 }
 
 <div class="dot-category-field__select">
@@ -16,9 +16,11 @@
         pButton></button>
 </div>
 
-@if ($showCategoriesSidebar()) { @defer (when $showCategoriesSidebar()) {
-<dot-category-field-sidebar
-    [visible]="$showCategoriesSidebar()"
-    (closedSidebar)="closeCategoriesSidebar()"
-    data-testId="sidebar-placeholder" />
-} }
+@if ($showCategoriesSidebar()) {
+    @defer (when $showCategoriesSidebar()) {
+        <dot-category-field-sidebar
+            [visible]="$showCategoriesSidebar()"
+            (closedSidebar)="closeCategoriesSidebar()"
+            data-testId="sidebar-placeholder" />
+    }
+}
