--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
@@ -1,19 +1,18 @@
 <div class="flex gap-3 align-items-center flex-wrap" data-testId="category-list">
     @for (category of $categoriesToShow(); track category.key) {
-        <p-chip
-            [pTooltip]="category.value"
-            [removable]="true"
-            [label]="category.value"
-            tooltipPosition="top"
-            styleClass="p-chip-sm"
-            (onRemove)="remove.emit(category.key)" />
-    }
-    @if ($showAllBtn()) {
-        <button
-            (click)="toogleShowAll()"
-            [label]="$btnLabel()"
-            class="p-button-sm p-button-text p-button-secondary"
-            data-testId="show-btn"
-            pButton></button>
+    <p-chip
+        [pTooltip]="category.value"
+        [removable]="true"
+        [label]="category.value"
+        tooltipPosition="top"
+        styleClass="p-chip-sm"
+        (onRemove)="remove.emit(category.key)" />
+    } @if ($showAllBtn()) {
+    <button
+        (click)="toogleShowAll()"
+        [label]="$btnLabel()"
+        class="p-button-sm p-button-text p-button-secondary"
+        data-testId="show-btn"
+        pButton></button>
     }
 </div>
