fix(edit-content): Binary field label btn

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
@@ -59,9 +59,9 @@
                             tooltipPosition="bottom"
                             [pTooltip]="$tooltipTextAIBtn()"
                             (click)="openDialog(BinaryFieldMode.AI)"
-                            [label]="'dot.binary.field.action.generate.with.dotai' | dm"
                             data-testId="action-ai-btn"
-                            styleClass="p-button-link p-button-sm pointer-events-auto">
+                            class="btn-ai"
+                            styleClass="p-button-link p-button-sm pointer-events-auto btn-ai lowercase">
                             <svg
                                 fill="none"
                                 height="22"
@@ -78,6 +78,9 @@
                                     d="M3.24925 6.62823L1.01825 7.57256C0.924385 7.61231 0.844063 7.68016 0.787521 7.76748C0.730978 7.8548 0.700781 7.95761 0.700781 8.06282C0.700781 8.16802 0.730978 8.27083 0.787521 8.35815C0.844063 8.44547 0.924385 8.51333 1.01825 8.55307L3.24925 9.4974L4.1592 11.8127C4.19751 11.9101 4.2629 11.9935 4.34704 12.0522C4.43118 12.1109 4.53026 12.1422 4.63163 12.1422C4.733 12.1422 4.83208 12.1109 4.91622 12.0522C5.00036 11.9935 5.06576 11.9101 5.10406 11.8127L6.01402 9.4974L8.24456 8.55307C8.33841 8.51332 8.41873 8.44546 8.47527 8.35815C8.53181 8.27083 8.56201 8.16801 8.56201 8.06282C8.56201 7.95762 8.53181 7.8548 8.47527 7.76749C8.41873 7.68017 8.33841 7.61231 8.24456 7.57256L6.01402 6.62823L5.10406 4.31342C5.06576 4.21602 5.00036 4.13266 4.91622 4.07399C4.83208 4.01531 4.733 3.98397 4.63163 3.98397C4.53026 3.98397 4.43118 4.01531 4.34704 4.07399C4.2629 4.13266 4.19751 4.21602 4.1592 4.31342L3.24925 6.62823Z"
                                     fill="#426BF0" />
                             </svg>
+                            <span class="bnt_label_ai">
+                                {{ 'dot.binary.field.action.generate.with.dotai' | dm }}
+                            </span>
                         </p-button>
                     }
                 </div>
