--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-layout/edit-ema-layout.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-layout/edit-ema-layout.component.html
@@ -1,7 +1,8 @@
+@if(uveStore.layoutProps(); as layoutProperties){
 <dotcms-template-builder-lib
-    *ngIf="layoutProperties$ | async as layoutProperties"
     (templateChange)="nextTemplateUpdate($event)"
     [layout]="layoutProperties.layout"
     [template]="layoutProperties.template"
     [containerMap]="layoutProperties.containersMap"
     data-testId="edit-ema-layout" />
+}
