fix(edit-content): remove css classes

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.html
@@ -61,7 +61,7 @@
                             (click)="openDialog(BinaryFieldMode.AI)"
                             data-testId="action-ai-btn"
                             class="btn-ai"
-                            styleClass="p-button-link p-button-sm pointer-events-auto btn-ai lowercase">
+                            styleClass="p-button-link p-button-sm pointer-events-auto">
                             <svg
                                 fill="none"
                                 height="22"
