cleaning and small fixes to visualize impact

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/edit-ema-editor.component.html
@@ -27,7 +27,7 @@
         }"
         class="iframe-wrapper">
         <iframe
-            (load)="onIframePageLoad()"
+            (load)="onIframePageLoad(es.iframe.state)"
             [src]="es.iframe.src | safeUrl"
             [title]="host"
             [ngStyle]="{
