--- a/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/ai-image-prompt.component.html
+++ b/core-web/libs/ui/src/lib/components/dot-ai-image-prompt/ai-image-prompt.component.html
@@ -9,7 +9,7 @@
         [maskStyleClass]="'p-dialog-mask-transparent'"
         [modal]="true"
         [resizable]="false"
-        [style]="{ height: '90%', width: '90%' }"
+        [style]="{ width: '1040px' }"
         (onHide)="store.hideDialog()">
         <div class="dialog-prompt__wrapper">
             @if (vm.showDialog) {
@@ -55,8 +55,7 @@
                 key="ai-image-prompt"
                 rejectButtonStyleClass="p-button-outlined"
                 acceptIcon="null"
-                rejectIcon="null">
-            </p-confirmDialog>
+                rejectIcon="null"></p-confirmDialog>
         </div>
     </p-dialog>
 }
