fix(edit-content): Binary field label btn (#29294)
### Parent Issue
https://github.com/dotCMS/core/issues/29291

### Proposed Changes
* Fix problem with label btn

### Checklist
- [x] Tests
- [x] Translations
- [x] Security Implications Contemplated (add notes if applicable)


### Screenshots
The label "Generate With DotAI" is wrong and will be "Generate With
dotAI"

![Screenshot 2024-07-19 at 12 33
43 PM](https://github.com/user-attachments/assets/e729d2d8-f408-440a-8fc3-049242f8166a)

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-binary-field/dot-edit-content-binary-field.component.scss
@@ -36,14 +36,18 @@
     &:empty {
         display: none;
     }
-}
 
-.binary-field__actions .p-button {
-    display: inline-flex;
-    user-select: none;
-    align-items: center;
-    vertical-align: bottom;
-    text-align: center;
+    .label-ai {
+        text-transform: none;
+    }
+
+    .p-button {
+        display: inline-flex;
+        user-select: none;
+        align-items: center;
+        vertical-align: bottom;
+        text-align: center;
+    }
 }
 
 .binary-field__drop-zone {
