--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
@@ -1,4 +1,4 @@
-@if(uveStore.toolbarState(); as toolbarState) {
+@if(uveStore.$toolbarState(); as toolbarState) {
 <p-toolbar>
     <div class="p-toolbar-group-left" data-testId="toolbar-left-content">
         <dot-device-selector-seo
@@ -26,7 +26,7 @@
             data-testId="edit-url-content-map" />
         }
 
-        <dot-ema-bookmarks [url]="toolbarState.bookmarks.url" />
+        <dot-ema-bookmarks [url]="toolbarState.bookmarksUrl" />
         <p-button
             (cdkCopyToClipboardCopied)="triggerCopyToast()"
             [cdkCopyToClipboard]="toolbarState.copyUrlButton.pureURL"
