--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-layout/edit-ema-layout.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-layout/edit-ema-layout.component.html
@@ -1,4 +1,4 @@
-@if(uveStore.layoutProps(); as layoutProperties){
+@if(uveStore.$layoutProps(); as layoutProperties){
 <dotcms-template-builder-lib
     (templateChange)="nextTemplateUpdate($event)"
     [layout]="layoutProperties.layout"
