--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/dot-ema-info-display/dot-ema-info-display.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/dot-ema-info-display/dot-ema-info-display.component.html
@@ -1,4 +1,4 @@
-@if (uveStore.$infoDisplay(); as op) {
+@if (uveStore.$infoDisplayOptions(); as op) {
 <p-button
     *ngIf="op.actionIcon"
     (onClick)="handleAction(op)"
