delete not needed feature

--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/edit-ema-editor/components/edit-ema-toolbar/edit-ema-toolbar.component.html
@@ -75,7 +75,7 @@
         <p-button
             (click)="unlockPage(unlockButton.inode)"
             [label]="'Unlock' | dm"
-            [loading]="uveStore.isLoading()"
+            [loading]="unlockButton.loading"
             styleClass="p-button-sm"
             data-testId="unlock-button"></p-button>
         }
